--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -37,6 +37,7 @@
 
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
+          You can navigate to <a href="https://www.partlywicked.com">a blog I periodically update</a> to read some of my criticism of escape rooms.
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
