--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-a:link { text-decoration: none; }
+
   {% include head.html %}
 
   <body class="theme-{% if site.resume_theme %}{{ site.resume_theme }}{% endif %}">
@@ -37,7 +37,8 @@ a:link { text-decoration: none; }
 
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
-          You can navigate to <a href="https://www.partlywicked.com"><em>a blog I periodically update</em></a> to read some of my criticism of escape rooms.
+  
+          You can navigate to <a href="https://www.partlywicked.com" style="text-decoration: none;"><strong>a blog I periodically update</strong></a> to read some of my criticism of escape rooms.
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
