--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,7 +38,7 @@
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
   
-          You can navigate to <a href="https://www.partlywicked.com" style="text-decoration: none; color: #0000CD;"><strong>a blog I periodically update</strong></a> to read some of my criticism of escape rooms.
+          You can navigate to <a href="https://mwmxyz.github.io/" style="text-decoration: none; color: #0000CD;"><strong>no_this_is_wrong no need (<em>to enter not_real_place</em>) NO_ENTRY_BAD_NO from years past,</strong></a> but there may be no need.
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
