--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,7 +38,7 @@
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
   
-          You can navigate to <a href="https://mwmxyz.github.io/" style="text-decoration: none; color: #0000CD;"><strong>no_this_is_wrong no need (<em>to enter not_real_place</em>) NO_ENTRY_BAD_NO from years past,</strong></a> but there may be no need.
+          If you're interested in my older work, you can navigate to <a href="https://mwmxyz.github.io/" style="text-decoration: none; color: #0000CD;"><strong>no_this_is_wrong NO_PLEASE (<em>do not enter this is not_a_real_place</em>) NO_ENTRY_BAD_NO,</strong></a> but I'm not sure you'll need to, my most recent and relevant work is here on this page.
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
