--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -38,7 +38,7 @@
         <div class="executive-summary" itemprop="description">
           {{ site.resume_header_intro }}
   
-          If you're interested in my older work, you can navigate to <a href="https://mwmxyz.github.io/" style="text-decoration: none; color: #0000CD;"><strong>no_this_is_wrong NO_PLEASE (<em>do not enter this is not_a_real_place</em>) NO_ENTRY_BAD_NO,</strong></a> but I'm not sure you'll need to, my most recent and relevant work is here on this page.
+          My main area of research and experimentation is in the overlap of education and game design, and my biggest project is an experimental model for online learning which resembles a LARP with a tiered set of options representing levels of participation, so that it is possible for a student to have a fully fictional character-avatar, or to participate as themselves, without an imaginary 'character' to serve as a shell.
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
